public struct ResourcePaths {
    public const string Card = "Card";
    public const string CardSprites = "Sprites/Cards";
    public const string QuestionMarkSprite = "Sprites/QuestionMark";
    public const string RedMarkSprite = "Sprites/RedMark";
    public const string Actors = "Actors";
}

public struct AnimatorParamsName {
    public const string Idle = "Idle";
    public const string Talk = "Talk";
    public const string Embarrassed = "Embarrassed";
    public const string Blend = "Blend";
}